--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -48,6 +48,8 @@
 @import components/user-form
 @import components/bitrix-search
 @import components/feature-list
+@import components/scroll-nav
+@import components/top-panel
 
 /*======================================================*/
 /*PAGES*/
