--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -32,10 +32,10 @@
 
 	background-color: whitesmoke
 
-	+media('<desk-lg')
+	//+media('<desk-lg')
 		margin-right: 0
 
-	+media('<tab-lg')
+	//+media('<tab-lg')
 		margin-left: 0
 
 .header
@@ -46,7 +46,7 @@
 	height: 100%
 	z-index: 5
 
-	background-color: lightgreen
+	background-color: white
 
 //.sidebar
 	display: inline
@@ -61,6 +61,8 @@
 	right: 0
 	top: 0
 	height: 100%
+	overflow-x: hidden
+	overflow-y: auto
 	width: $sidebar-width
 
 	background-color: sandybrown
