--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -19,8 +19,11 @@ $bottom-space-sm: round-float($font-size*$line-height*0.5, 1) !default
 $bottom-space-md: round-float($font-size*$line-height*1.5, 1) !default
 $bottom-space-lg: round-float($font-size*$line-height*2, 1) !default
 
+// основной цвет сайте
+$base-color: #fabb00 !default
 // цвет фона страницы
 $bg-color: brown !default
+$bg-color-light: #f3f3f3 !default
 // цвет остовного текста
 $text-color: #262626 !default
 // цвет основных заголовков заголовков
@@ -32,7 +35,7 @@ $text-color-alt: tomato !default
 // цвет ссылки
 $link-color: blue !default
 // цвет линий и границ
-$border-color: lightgray !default
+$border-color: #999 !default
 // цвет специальных элементов
 $mark-color: tomato !default
 
@@ -43,11 +46,11 @@ $user-content: user-content !default
 
 // layout
 // отступы слева и справа для всего сайта
-$page-layout-space-horizontal: 20px !default
+$page-layout-space-horizontal: 50px !default
 // максимальная ширина сайта
 $page-layout-width: 1920px + $page-layout-space-horizontal*2 !default
 // минимальные отступы слева и справа у текствого блока
-$text-layout-space-horizontal: 40px !default
+$text-layout-space-horizontal: 50px !default
 $text-layout-space-horizontal-md: 30px !default
 $text-layout-space-horizontal-sm: 15px !default
 // максимальная ширина текстового блока
@@ -93,6 +96,9 @@ $header-width: 80px !default
 
 // sidebar
 $sidebar-width: 320px !default
+
+// top panel
+$top-panel-height: 100px !default
 
 // ============= обнуление жирности и наклонности шрифта ==============
 // ============= использовать, если подключается font-face ==============
