--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -1,3 +1,57 @@
 @import ../utils/variables
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
+
+/*btn*/
+[class|="btn"], [class*=" btn-"], input[type="submit"], input[type="button"], input[type="reset"], button
+	display: inline-block
+	vertical-align: top
+	position: relative
+	text-align: center
+	text-decoration: none
+	cursor: pointer
+
+[class|="btn"], [class*=" btn-"]
+	& input[type="submit"], & input[type="button"], & input[type="reset"]
+		background: url("../../img/empty.png") repeat
+		display: block
+		+cover()
+		padding: 0
+		border: none
+		z-index: 99
+		opacity: 0
+
+/*btn-default*/
+[class*="btn-default"]
+	position: relative
+	+font-alt-bold
+	+font(1.6rem, 24px)
+	color: $btn-text-color
+	padding: 12px 25px
+	border: 1px solid transparent
+	background: $btn-bg-color
+	box-shadow: none
+	transition-property: background-color, color
+	transition-duration: $animation-speed
+	margin: 0
+
+	.no-touchevents &:hover
+		background-color: $btn-bg-hover-color
+
+	&:active
+		transform: scale(0.95)
+
+/*btn-default end*/
+
+/*btn-default-alt*/
+.btn-default-alt
+	color: $btn-bg-color
+	border: 2px solid $btn-bg-color
+	background: $btn-text-color
+
+	.no-touchevents &:hover
+		background: $btn-bg-hover-color
+		color: $btn-text-color
+
+/*btn-default-alt end*/
+/*btn end*/
