--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -4,22 +4,79 @@
 
 /*HEADER*/
 .header__holder
-	padding: 10px 0
-	+clear
+	display: table
+	min-height: 100vh
+	width: 100%
+	table-layout: fixed
+
+.header__row
+	display: table-row
+
+.header__cell
+	display: table-cell
+	vertical-align: middle
+	text-align: center
+
+	.header__row:first-child &
+		vertical-align: top
+
+	.header__row:last-child &
+		vertical-align: bottom
+
+		svg
+			display: block
+			width: 30px
+			height: 30px
+			+push-auto
+			margin-bottom: 20px
+
+.user-option__item
+		display: block
+		position: relative
+		height: 0
+		+ratio()
+		color: $text-color
+		text-decoration: none
+		transition-property: background-color
+		transition-duration: $animation-speed
+
+		.no-touchevents &:hover
+			background-color: $bg-color-light
+
+.user-option__icon
+	+centering()
+
+	& > span
+		+hide-text
+
+	svg
+		display: block
+		+size(24px)
+
+	.basket-counter
+		position: absolute
+		left: 100%
+		bottom: 100%
+		+size(14px)
+		+font(1.0rem, 14px)
+		+margin($left: -7px, $bottom: -7px)
+		background-color: $base-color
+		border-radius: 50%
 
 /*logo*/
 .logo
-	float: left
-	background: url(../../img/logo-short.png) no-repeat
-	width: 40px
-	height: 34px
+	display: block
+	width: 100%
+	background: #666 url(../../img/logo-short.png) no-repeat center center
+	background-size: auto 34px
 	text-indent: -9999px
 	overflow: hidden
-	margin: 0 2rem 0 0
+	z-index: 50
 
 	a
 		display: block
-		height: 100%
+		height: 0
+		+ratio()
 
 /*logo end*/
 /*HEADER end*/
