--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -50,6 +50,7 @@
 @import components/feature-list
 @import components/scroll-nav
 @import components/top-panel
+@import components/news-grid
 
 /*======================================================*/
 /*PAGES*/
