--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -22,7 +22,7 @@ $bottom-space-lg: round-float($font-size*$line-height*2, 1) !default
 // основной цвет сайте
 $base-color: #fabb00 !default
 // цвет фона страницы
-$bg-color: brown !default
+$bg-color: white !default
 $bg-color-light: #f3f3f3 !default
 // цвет остовного текста
 $text-color: #262626 !default
@@ -90,6 +90,11 @@ $animation-speed-mouseleave: 0.35s !default
 // fonts style
 $font-norm: 'Roboto', sans-serif !default
 $font-alt: 'Roboto Slab', serif !default
+
+// grids
+$grid-space: 40px !default // отступы между элементами сетки, например, новостей
+$grid-inside-horizontal-space: round($grid-space*0.875) !default // горизонтальные отступы внутри элементов сетки
+$grid-inside-vertical-space: round($grid-inside-horizontal-space*0.875) !default // вертикальные отступы внутри элементов сетки
 
 // header
 $header-width: 80px !default
