--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -75,6 +75,12 @@
 
 	background-color: lightgreen
 
+	.home-page &
+		display: none
+
+.home-page .spacer
+	display: none
+
 .max-wrap
 	max-width: $page-layout-width
 
