--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -2,7 +2,7 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/*btn*/
+/*buttons
 [class|="btn"], [class*=" btn-"], input[type="submit"], input[type="button"], input[type="reset"], button
 	display: inline-block
 	vertical-align: top
@@ -21,7 +21,7 @@
 		z-index: 99
 		opacity: 0
 
-/*btn-default*/
+//btn-default
 [class*="btn-default"]
 	position: relative
 	+font-alt-bold
@@ -41,9 +41,7 @@
 	&:active
 		transform: scale(0.95)
 
-/*btn-default end*/
-
-/*btn-default-alt*/
+//btn-default-alt
 .btn-default-alt
 	color: $btn-bg-color
 	border: 2px solid $btn-bg-color
@@ -53,14 +51,12 @@
 		background: $btn-bg-hover-color
 		color: $btn-text-color
 
-/*btn-default-alt end*/
-
-/*btn more
-.btn-more
+// btn-more
+.btn-main, .btn-main--more
 	position: relative
 	min-width: 240px
+	padding: 13px 30px
 	+font(1.8rem, 1.333)
-	padding: 13px 65px 13px 30px
 	color: white
 	background-color: black
 	transition-property: background-color, color
@@ -68,10 +64,26 @@
 	+antialiased
 
 	.no-touchevents &:hover
-		background-color: tint(black, 75%)
+		background-color: $base-color
 
 	&:active
 		transform: translate(0, 2px) scale(0.95)
+
+	& + span
+		display: inline-block
+		vertical-align: middle
+
+	svg
+		display: inline-block
+		vertical-align: middle
+		+size(20px)
+		margin-right: 20px
+
+	path
+		fill: white
+
+.btn-main--more
+	padding: 13px 65px 13px 30px
 
 	&::before, &::after
 		+pseudo()
@@ -84,5 +96,4 @@
 	&::before
 		transform: rotate(0.25turn)
 
-/*btn more end
-/*btn end*/
+/*buttons end
