--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -25,7 +25,7 @@ $base-color: #fabb00 !default
 $bg-color: white !default
 $bg-color-light: #f3f3f3 !default
 // цвет остовного текста
-$text-color: #262626 !default
+$text-color: black !default
 // цвет основных заголовков заголовков
 $title-color: black !default
 // цвет текста светлее основного
@@ -98,6 +98,12 @@ $grid-inside-vertical-space: round($grid-inside-horizontal-space*0.875) !default
 
 // header
 $header-width: 80px !default
+
+// logo
+$logo-bg-color: #666 !default
+
+// navigation
+$nav-width: 380px !default
 
 // sidebar
 $sidebar-width: 320px !default
