--- a/src/sass/partials/_navigation.sass
+++ b/src/sass/partials/_navigation.sass
@@ -3,7 +3,7 @@
 @import ../../libs/include-media/dist/include-media
 
 /*navigation*/
-html.nav-popup-before-open
+html.css-scroll-fixed
 
 	&.touchevents
 		+scroll-blocked() // блокировка скролла во время открытия попапа (на тачскринах)
