--- a/src/sass/components/_scroll-nav.sass
+++ b/src/sass/components/_scroll-nav.sass
@@ -4,9 +4,11 @@
 
 /*scroll menu
 .scroll-nav
+	$scroll-nav-space: 40px
+
 	position: fixed
-	top: $page-layout-space-horizontal
-	right: $sidebar-width + $page-layout-space-horizontal
+	top: $scroll-nav-space
+	right: $sidebar-width + $scroll-nav-space
 	z-index: 50
 
 	&, .#{$user-content} &
