--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -297,7 +297,7 @@ $btn-menu-lines-color: $text-color !default
 	.no-touchevents &:hover
 		background-color: $bg-color-light
 
-	.fp-is-bottom &
+	.fp-is-bottom &, .nav-popup-before-open &
 		opacity: 0
 		visibility: hidden
 		transform: translate(0, 100%)
