--- a/src/sass/partials/_navigation.sass
+++ b/src/sass/partials/_navigation.sass
@@ -8,6 +8,14 @@ html.css-scroll-fixed
 	&.touchevents
 		+scroll-blocked() // блокировка скролла во время открытия попапа (на тачскринах)
 
+.content-wrap, .scroll-nav, .sidebar, .top-panel
+	transition-property: transform
+	transition-duration: 0.3s
+	transition-timing-function: ease-out
+
+	.nav-popup-before-open &
+		transform: translate($nav-width - 100, 0)
+
 .nav-wrap
 	position: fixed
 	left: $header-width
