--- a/src/sass/components/_user-form.sass
+++ b/src/sass/components/_user-form.sass
@@ -5,8 +5,7 @@
 /*user form*/
 .form-title
 	display: block
-	font-family: $font-alt
-	font-weight: bold
+	+font-alt-bold
 	padding-bottom: $bottom-space
 	color: $text-color-alt
 	font-size: 2.4rem
