--- a/src/sass/partials/_forms-default.sass
+++ b/src/sass/partials/_forms-default.sass
@@ -105,7 +105,7 @@ textarea
 		display: block
 
 .success-text
-	font-weight: bold
+	+font-bold
 	color: $form-success-color
 	padding: 0 0 20px
 	text-align: center
