--- a/src/sass/partials/_sidebar.sass
+++ b/src/sass/partials/_sidebar.sass
@@ -39,7 +39,7 @@
 	& > strong
 		display: block
 		+font(1.8rem, 1.167)
-		font-weight: 300
+		+font-normal
 		text-transform: uppercase
 
 .download
@@ -57,13 +57,13 @@
 	.download__title
 		display: block
 		overflow: hidden
+		+font-bold
 		+font(2.0rem, 1.2)
-		font-weight: 600
 
 		span
 			display: block
+			+font-normal
 			+font(1.4rem, 1.5)
-			font-weight: 300
 			color: $text-color-light
 			margin-top: 0.5em
 
