--- a/src/sass/fonts/_fonts.sass
+++ b/src/sass/fonts/_fonts.sass
@@ -3,12 +3,11 @@
 // =============================================================================
 // Google Fonts
 // =============================================================================
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,400i,700,700i&subset=cyrillic')
+//@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,400i,700,700i&subset=cyrillic')
 
 // =============================================================================
-// Google Fonts
+// Font-Face Fonts
 // =============================================================================
-//+font-face("candara-regular", "../fonts/candara/regular/candara", normal, normal, eot woff ttf svg)
-//+font-face("candara-bold", "../fonts/candara/bold/candarab", normal, normal, eot woff ttf svg)
-//+font-face("candara-italic", "../fonts/candara/italic/candarai", normal, normal, eot woff ttf svg)
-//+font-face("candara-bold-italic", "../fonts/candara/bold-italic/candaraz", normal, normal, eot woff ttf svg)
++font-face("magistralc-regular", "../fonts/magistralc/regular/magistralc", normal, normal, eot woff ttf svg)
++font-face("magistralc-bold", "../fonts/magistralc/bold/magistralc-bold", normal, normal, eot woff ttf svg)
++font-face("magistralc-black", "../fonts/magistralc/black/magistralc-black", normal, normal, eot woff ttf svg)
