--- a/src/sass/partials/_navigation.sass
+++ b/src/sass/partials/_navigation.sass
@@ -44,26 +44,51 @@ html.css-scroll-fixed
 	+antialiased
 
 .nav__list
+	+font-normal
 	+font(2.4rem, 1.333)
-	font-weight: 400
 	color: $text-color
 
 	li
 		position: relative
 		margin: 1em 0
 
-		&.current a
-			color: $base-color
-
 	a
-		display: block
+		display: inline-block
 		color: inherit
 		text-decoration: none
 		transition-property: color
 		transition-duration: $animation-speed
 
-		.no-touchevents &:hover
+		& > span
+			display: inline-block
+			position: relative
+			overflow: hidden
+
+			&::after
+				+pseudo()
+				left: 0
+				bottom: 0
+				+size(100%, 0)
+				border-top: 1px solid lighten($text-color, 60%)
+				transform: translate(-100%, 0)
+				transition-property: transform, filter
+				transition-duration: $animation-speed
+
+	// hover
+	.no-touchevents & a:hover
+		& > span
+			&::after
+				transform: translate(0, 0)
+
+	// current
+	li.current
+		a
 			color: $base-color
+			//+font-bold
+
+			& > span
+				&::after
+					content: none
 
 /*navigation end*/
 
@@ -79,8 +104,8 @@ html.css-scroll-fixed
 	.copyright
 		margin-bottom: 1em
 		padding-bottom: 1em
+		+font(1.4rem, 1.5)
 		text-transform: uppercase
-		+font-bold
 		border-bottom: 1px solid $border-color
 
 		&:last-child
